fixed issue with auth page on mobile

--- a/src/pages/auth/classes.module.scss
+++ b/src/pages/auth/classes.module.scss
@@ -1,13 +1,16 @@
 @import "src/styles/index";
 
 .auth_container {
-  position: fixed;
-  overflow: hidden;
-  top: 50%;
-  left: 50%;
-  height: calc($index * 525);
+  margin: calc(50vh - calc(calc($index * 525) / 2)) auto;
   width: calc($index * 950);
-  transform: translate(-50%, -50%);
-  border-radius: 24px;
-  background: #fff;
+  height: calc($index * 525);
+
+  .auth_content {
+    position: absolute;
+    overflow: hidden;
+    height: calc($index * 525);
+    width: calc($index * 950);
+    border-radius: 24px;
+    background: #fff;
+  }
 }
